Refactor filter